--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -23,9 +23,7 @@ stages:
     - task: Docker@2
       displayName: Build an image
       inputs:
-        command: buildAndPush
-        repository: $(imageRepository)
+        command: build
         dockerfile: '**/Dockerfile'
-        containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
