Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -25,7 +25,8 @@ stages:
       inputs:
         command: buildAndPush
         dockerfile: '**/Dockerfile'
-        repository: $(imageRepository)
-        containerRegistry: $(dockerRegistryServiceConnection)
+        repository: $(imageName)
+        containerRegistry: |
+          $(dockerHub)
         tags: |
           $(tag)
