--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -26,7 +26,6 @@ stages:
         command: buildAndPush
         dockerfile: '**/Dockerfile'
         repository: $(imageName)
-        containerRegistry: |
-          $(dockerHub)
+        containerRegistry: $(dockerHub)
         tags: |
           $(tag)
