--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,11 +21,19 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build and push an image to container registry
+      displayName: Build image 
       inputs:
-        command: buildAndPush
-        dockerfile: '**/Dockerfile'
+        command: build
         repository: $(imageName)
-        containerRegistry: $(dockerHub)
+        dockerfile: '**/Dockerfile'
+        tags: |
+          $(tag)
+    - task: Docker@2
+      displayName: Push imageto container registry
+      inputs:
+        command: push
+        containerRegistry: |
+          $(dockerHub)
+        repository: $(imageName)
         tags: |
           $(tag)
