--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -29,6 +29,11 @@ stages:
         tags: |
           $(tag)
     - task: Docker@2
+      displayName: Login to Docker Hub
+      inputs:
+        command: login
+        containerRegistry: dockerHub 
+    - task: Docker@2
       displayName: Push imageto container registry
       inputs:
         command: push
