--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -38,7 +38,7 @@ stages:
       inputs:
         command: push
         containerRegistry: |
-          $(dockerHub)
+          dockerHub
         repository: $(imageName)
         tags: |
           $(tag)
