--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -21,24 +21,17 @@ stages:
       vmImage: 'ubuntu-latest'
     steps:
     - task: Docker@2
-      displayName: Build image 
-      inputs:
-        command: build
-        repository: $(imageName)
-        dockerfile: '**/Dockerfile'
-        tags: |
-          $(tag)
-    - task: Docker@2
       displayName: Login to Docker Hub
       inputs:
         command: login
-        containerRegistry: dockerHub 
+        containerRegistry: dockerHub
     - task: Docker@2
-      displayName: Push imageto container registry
+      displayName: Build image and pus to registry
       inputs:
-        command: push
+        command: buildAndPush
+        repository: $(imageName)
+        dockerfile: '**/Dockerfile'
         containerRegistry: |
           dockerHub
-        repository: $(imageName)
         tags: |
           $(tag)
