--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,38 +1,38 @@
 # Docker
-# Build a Docker image 
+# Build a Docker image
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-- master
+  - master
 
 resources:
-- repo: self
+  - repo: self
 
 variables:
-  tag: '$(Build.BuildId)'
-  imageName: 'gsaurer/fhwn19-node-app'
+  tag: "$(Build.BuildId)"
+  imageName: "gsaurer/fhwn19-node-app"
 
 stages:
-- stage: Build
-  displayName: Build image
-  jobs:  
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: 'ubuntu-latest'
-    steps:
-    - task: Docker@2
-      displayName: Login to Docker Hub
-      inputs:
-        command: login
-        containerRegistry: dockerHub
-    - task: Docker@2
-      displayName: Build image and pus to registry
-      inputs:
-        command: buildAndPush
-        repository: $(imageName)
-        dockerfile: '**/Dockerfile'
-        containerRegistry: |
-          dockerHub
-        tags: |
-          $(tag)
+  - stage: Build
+    displayName: Build image
+    jobs:
+      - job: Build
+        displayName: Build
+        pool:
+          vmImage: "ubuntu-latest"
+        steps:
+          - task: Docker@2
+            displayName: Login to Docker Hub
+            inputs:
+              command: login
+              containerRegistry: dockerHub
+          - task: Docker@2
+            displayName: Build image and pus to registry
+            inputs:
+              command: buildAndPush
+              repository: $(imageName)
+              dockerfile: "**/Dockerfile"
+              containerRegistry: |
+                dockerHub
+              tags: |
+                latest
